kubernetes/monitorizacion/monitoring-resources.yaml
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: '9'
      meta.helm.sh/release-name: monitoring
      meta.helm.sh/release-namespace: monitoring
    labels:
      app.kubernetes.io/instance: monitoring
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/name: grafana
      app.kubernetes.io/version: 13.0.1
      helm.sh/chart: grafana-12.1.1
    name: monitoring-grafana
    namespace: monitoring
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app.kubernetes.io/instance: monitoring
        app.kubernetes.io/name: grafana
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        annotations:
          checksum/config: 5bceeca3808849664f09f642547ce17fdf495522238ef9ce952b20cfa36b7de5
          checksum/sc-dashboard-provider-config: e70bf6a851099d385178a76de9757bb0bef8299da6d8443602590e44f05fdf24
          checksum/secret: 69a6b2db0bf5f64774ea418c642ec9f340872161b9016d32572637de3ca4b566
          kubectl.kubernetes.io/default-container: grafana
          kubectl.kubernetes.io/restartedAt: '2026-05-07T18:48:04Z'
        labels:
          app.kubernetes.io/instance: monitoring
          app.kubernetes.io/name: grafana
          app.kubernetes.io/version: 13.0.1
          helm.sh/chart: grafana-12.1.1
      spec:
        automountServiceAccountToken: true
        containers:
        - env:
          - name: METHOD
            value: WATCH
          - name: LABEL
            value: grafana_dashboard
          - name: LABEL_VALUE
            value: '1'
          - name: FOLDER
            value: "/tmp/dashboards"
          - name: RESOURCE
            value: both
          - name: NAMESPACE
            value: ALL
          - name: REQ_USERNAME
            valueFrom:
              secretKeyRef:
                key: admin-user
                name: monitoring-grafana
          - name: REQ_PASSWORD
            valueFrom:
              secretKeyRef:
                key: admin-password
                name: monitoring-grafana
          - name: REQ_URL
            value: http://localhost:3000/api/admin/provisioning/dashboards/reload
          - name: REQ_METHOD
            value: POST
          image: quay.io/kiwigrid/k8s-sidecar:2.6.0
          imagePullPolicy: IfNotPresent
          name: grafana-sc-dashboard
          resources: {}
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            seccompProfile:
              type: RuntimeDefault
          terminationMessagePath: "/dev/termination-log"
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: "/tmp/dashboards"
            name: sc-dashboard-volume
        - env:
          - name: METHOD
            value: WATCH
          - name: LABEL
            value: grafana_datasource
          - name: LABEL_VALUE
            value: '1'
          - name: FOLDER
            value: "/etc/grafana/provisioning/datasources"
          - name: RESOURCE
            value: both
          - name: REQ_USERNAME
            valueFrom:
              secretKeyRef:
                key: admin-user
                name: monitoring-grafana
          - name: REQ_PASSWORD
            valueFrom:
              secretKeyRef:
                key: admin-password
                name: monitoring-grafana
          - name: REQ_URL
            value: http://localhost:3000/api/admin/provisioning/datasources/reload
          - name: REQ_METHOD
            value: POST
          image: quay.io/kiwigrid/k8s-sidecar:2.6.0
          imagePullPolicy: IfNotPresent
          name: grafana-sc-datasources
          resources: {}
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            seccompProfile:
              type: RuntimeDefault
          terminationMessagePath: "/dev/termination-log"
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: "/etc/grafana/provisioning/datasources"
            name: sc-datasources-volume
        - env:
          - name: POD_IP
            valueFrom:
              fieldRef:
                apiVersion: v1
                fieldPath: status.podIP
          - name: GF_SECURITY_ADMIN_USER
            valueFrom:
              secretKeyRef:
                key: admin-user
                name: monitoring-grafana
          - name: GF_SECURITY_ADMIN_PASSWORD
            valueFrom:
              secretKeyRef:
                key: admin-password
                name: monitoring-grafana
          - name: GF_PATHS_DATA
            value: "/var/lib/grafana/"
          - name: GF_PATHS_LOGS
            value: "/var/log/grafana"
          - name: GF_PATHS_PLUGINS
            value: "/var/lib/grafana/plugins"
          - name: GF_PATHS_PROVISIONING
            value: "/etc/grafana/provisioning"
          - name: GF_UNIFIED_STORAGE_INDEX_PATH
            value: "/var/lib/grafana-search/bleve"
          - name: GF_SMTP_PASSWORD
            valueFrom:
              secretKeyRef:
                key: GF_SMTP_PASSWORD
                name: grafana-smtp
          - name: GF_SMTP_USER
            valueFrom:
              secretKeyRef:
                key: GF_SMTP_USER
                name: grafana-smtp
          - name: GF_SMTP_ENABLED
            value: 'true'
          - name: GF_SMTP_HOST
            value: smtp.office365.com:587
          - name: GF_SMTP_FROM_ADDRESS
            value: aitgarabe@alu.edu.gva.es
          - name: GF_SMTP_FROM_NAME
            value: ASIR TFG
          - name: GF_SMTP_STARTTLS_POLICY
            value: OpportunisticStartTLS
          - name: GF_SERVER_ROOT_URL
            value: https://garciaa.grafana.local
          - name: GF_SERVER_DOMAIN
            value: garciaa.grafana.local
          - name: GF_SERVER_SERVE_FROM_SUB_PATH
            value: 'false'
          image: docker.io/grafana/grafana:13.0.1
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 10
            httpGet:
              path: "/api/health"
              port: grafana
              scheme: HTTP
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 30
          name: grafana
          ports:
          - containerPort: 3000
            name: grafana
            protocol: TCP
          - containerPort: 9094
            name: gossip-tcp
            protocol: TCP
          - containerPort: 9094
            name: gossip-udp
            protocol: UDP
          - containerPort: 6060
            name: profiling
            protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: "/api/health"
              port: grafana
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources: {}
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            privileged: false
            seccompProfile:
              type: RuntimeDefault
          terminationMessagePath: "/dev/termination-log"
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: "/etc/grafana/grafana.ini"
            name: config
            subPath: grafana.ini
          - mountPath: "/var/lib/grafana"
            name: storage
          - mountPath: "/var/lib/grafana-search"
            name: search
          - mountPath: "/tmp/dashboards"
            name: sc-dashboard-volume
          - mountPath: "/etc/grafana/provisioning/dashboards/sc-dashboardproviders.yaml"
            name: sc-dashboard-provider
            subPath: provider.yaml
          - mountPath: "/etc/grafana/provisioning/datasources"
            name: sc-datasources-volume
        dnsPolicy: ClusterFirst
        enableServiceLinks: true
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext:
          fsGroup: 472
          runAsGroup: 472
          runAsNonRoot: true
          runAsUser: 472
        serviceAccount: monitoring-grafana
        serviceAccountName: monitoring-grafana
        shareProcessNamespace: false
        terminationGracePeriodSeconds: 30
        volumes:
        - configMap:
            defaultMode: 420
            name: monitoring-grafana
          name: config
        - name: storage
          persistentVolumeClaim:
            claimName: monitoring-grafana
        - emptyDir: {}
          name: search
        - emptyDir: {}
          name: sc-dashboard-volume
        - configMap:
            defaultMode: 420
            name: monitoring-grafana-config-dashboards
          name: sc-dashboard-provider
        - emptyDir: {}
          name: sc-datasources-volume
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: '1'
      meta.helm.sh/release-name: monitoring
      meta.helm.sh/release-namespace: monitoring
    labels:
      app: kube-prometheus-stack-operator
      app.kubernetes.io/component: prometheus-operator
      app.kubernetes.io/instance: monitoring
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/name: kube-prometheus-stack-prometheus-operator
      app.kubernetes.io/part-of: kube-prometheus-stack
      app.kubernetes.io/version: 84.0.0
      chart: kube-prometheus-stack-84.0.0
      heritage: Helm
      release: monitoring
    name: monitoring-kube-prometheus-operator
    namespace: monitoring
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: kube-prometheus-stack-operator
        release: monitoring
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        labels:
          app: kube-prometheus-stack-operator
          app.kubernetes.io/component: prometheus-operator
          app.kubernetes.io/instance: monitoring
          app.kubernetes.io/managed-by: Helm
          app.kubernetes.io/name: kube-prometheus-stack-prometheus-operator
          app.kubernetes.io/part-of: kube-prometheus-stack
          app.kubernetes.io/version: 84.0.0
          chart: kube-prometheus-stack-84.0.0
          heritage: Helm
          release: monitoring
      spec:
        automountServiceAccountToken: true
        containers:
        - args:
          - "--kubelet-service=kube-system/monitoring-kube-prometheus-kubelet"
          - "--kubelet-endpoints=true"
          - "--kubelet-endpointslice=false"
          - "--localhost=127.0.0.1"
          - "--prometheus-config-reloader=quay.io/prometheus-operator/prometheus-config-reloader:v0.90.1"
          - "--config-reloader-cpu-request=0"
          - "--config-reloader-cpu-limit=0"
          - "--config-reloader-memory-request=0"
          - "--config-reloader-memory-limit=0"
          - "--thanos-default-base-image=quay.io/thanos/thanos:v0.41.0"
          - "--secret-field-selector=type!=kubernetes.io/dockercfg,type!=kubernetes.io/service-account-token,type!=helm.sh/release.v1"
          - "--web.enable-tls=true"
          - "--web.cert-file=/cert/cert"
          - "--web.key-file=/cert/key"
          - "--web.listen-address=:10250"
          - "--web.tls-min-version=VersionTLS13"
          image: quay.io/prometheus-operator/prometheus-operator:v0.90.1
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: "/healthz"
              port: https
              scheme: HTTPS
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          name: kube-prometheus-stack
          ports:
          - containerPort: 10250
            name: https
            protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: "/healthz"
              port: https
              scheme: HTTPS
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources: {}
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            readOnlyRootFilesystem: true
          terminationMessagePath: "/dev/termination-log"
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: "/cert"
            name: tls-secret
            readOnly: true
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext:
          fsGroup: 65534
          runAsGroup: 65534
          runAsNonRoot: true
          runAsUser: 65534
          seccompProfile:
            type: RuntimeDefault
        serviceAccount: monitoring-kube-prometheus-operator
        serviceAccountName: monitoring-kube-prometheus-operator
        terminationGracePeriodSeconds: 30
        volumes:
        - name: tls-secret
          secret:
            defaultMode: 420
            secretName: monitoring-kube-prometheus-admission
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: '1'
      meta.helm.sh/release-name: monitoring
      meta.helm.sh/release-namespace: monitoring
    labels:
      app.kubernetes.io/component: metrics
      app.kubernetes.io/instance: monitoring
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/name: kube-state-metrics
      app.kubernetes.io/part-of: kube-state-metrics
      app.kubernetes.io/version: 2.18.0
      helm.sh/chart: kube-state-metrics-7.2.2
      release: monitoring
    name: monitoring-kube-state-metrics
    namespace: monitoring
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app.kubernetes.io/instance: monitoring
        app.kubernetes.io/name: kube-state-metrics
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        labels:
          app.kubernetes.io/component: metrics
          app.kubernetes.io/instance: monitoring
          app.kubernetes.io/managed-by: Helm
          app.kubernetes.io/name: kube-state-metrics
          app.kubernetes.io/part-of: kube-state-metrics
          app.kubernetes.io/version: 2.18.0
          helm.sh/chart: kube-state-metrics-7.2.2
          release: monitoring
      spec:
        automountServiceAccountToken: true
        containers:
        - args:
          - "--port=8080"
          - "--resources=certificatesigningrequests,configmaps,cronjobs,daemonsets,deployments,endpointslices,horizontalpodautoscalers,ingresses,jobs,leases,limitranges,mutatingwebhookconfigurations,namespaces,networkpolicies,nodes,persistentvolumeclaims,persistentvolumes,poddisruptionbudgets,pods,replicasets,replicationcontrollers,resourcequotas,secrets,services,statefulsets,storageclasses,validatingwebhookconfigurations,volumeattachments"
          image: registry.k8s.io/kube-state-metrics/kube-state-metrics:v2.18.0
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: "/livez"
              port: http
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          name: kube-state-metrics
          ports:
          - containerPort: 8080
            name: http
            protocol: TCP
          - containerPort: 8081
            name: metrics
            protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: "/readyz"
              port: metrics
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          resources: {}
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            readOnlyRootFilesystem: true
          terminationMessagePath: "/dev/termination-log"
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext:
          fsGroup: 65534
          runAsGroup: 65534
          runAsNonRoot: true
          runAsUser: 65534
          seccompProfile:
            type: RuntimeDefault
        serviceAccount: monitoring-kube-state-metrics
        serviceAccountName: monitoring-kube-state-metrics
        terminationGracePeriodSeconds: 30
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      app.kubernetes.io/managed-by: prometheus-operator
      managed-by: prometheus-operator
      operated-alertmanager: 'true'
    name: alertmanager-operated
    namespace: monitoring
    ownerReferences:
    - apiVersion: monitoring.coreos.com/v1
      kind: Alertmanager
      name: monitoring-kube-prometheus-alertmanager
      uid: 16bb690d-dd27-4fee-b742-946cee862194
  spec:
    clusterIP: None
    clusterIPs:
    - None
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: http-web
      port: 9093
      protocol: TCP
      targetPort: http-web
    - name: tcp-mesh
      port: 9094
      protocol: TCP
      targetPort: mesh-tcp
    - name: udp-mesh
      port: 9094
      protocol: UDP
      targetPort: mesh-udp
    publishNotReadyAddresses: true
    selector:
      app.kubernetes.io/name: alertmanager
    sessionAffinity: None
    type: ClusterIP
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      meta.helm.sh/release-name: monitoring
      meta.helm.sh/release-namespace: monitoring
    labels:
      app.kubernetes.io/instance: monitoring
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/name: grafana
      app.kubernetes.io/version: 13.0.1
      helm.sh/chart: grafana-12.1.1
    name: monitoring-grafana
    namespace: monitoring
  spec:
    clusterIP: 10.43.164.46
    clusterIPs:
    - 10.43.164.46
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: http-web
      port: 80
      protocol: TCP
      targetPort: grafana
    selector:
      app.kubernetes.io/instance: monitoring
      app.kubernetes.io/name: grafana
    sessionAffinity: None
    type: ClusterIP
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      meta.helm.sh/release-name: monitoring
      meta.helm.sh/release-namespace: monitoring
    labels:
      app: kube-prometheus-stack-alertmanager
      app.kubernetes.io/instance: monitoring
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/part-of: kube-prometheus-stack
      app.kubernetes.io/version: 84.0.0
      chart: kube-prometheus-stack-84.0.0
      heritage: Helm
      release: monitoring
      self-monitor: 'true'
    name: monitoring-kube-prometheus-alertmanager
    namespace: monitoring
  spec:
    clusterIP: 10.43.193.187
    clusterIPs:
    - 10.43.193.187
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: http-web
      port: 9093
      protocol: TCP
      targetPort: 9093
    - appProtocol: http
      name: reloader-web
      port: 8080
      protocol: TCP
      targetPort: reloader-web
    selector:
      alertmanager: monitoring-kube-prometheus-alertmanager
      app.kubernetes.io/name: alertmanager
    sessionAffinity: None
    type: ClusterIP
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      meta.helm.sh/release-name: monitoring
      meta.helm.sh/release-namespace: monitoring
    labels:
      app: kube-prometheus-stack-operator
      app.kubernetes.io/component: prometheus-operator
      app.kubernetes.io/instance: monitoring
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/name: kube-prometheus-stack-prometheus-operator
      app.kubernetes.io/part-of: kube-prometheus-stack
      app.kubernetes.io/version: 84.0.0
      chart: kube-prometheus-stack-84.0.0
      heritage: Helm
      release: monitoring
    name: monitoring-kube-prometheus-operator
    namespace: monitoring
  spec:
    clusterIP: 10.43.130.243
    clusterIPs:
    - 10.43.130.243
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: https
      port: 443
      protocol: TCP
      targetPort: https
    selector:
      app: kube-prometheus-stack-operator
      release: monitoring
    sessionAffinity: None
    type: ClusterIP
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      meta.helm.sh/release-name: monitoring
      meta.helm.sh/release-namespace: monitoring
    labels:
      app: kube-prometheus-stack-prometheus
      app.kubernetes.io/instance: monitoring
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/part-of: kube-prometheus-stack
      app.kubernetes.io/version: 84.0.0
      chart: kube-prometheus-stack-84.0.0
      heritage: Helm
      release: monitoring
      self-monitor: 'true'
    name: monitoring-kube-prometheus-prometheus
    namespace: monitoring
  spec:
    clusterIP: 10.43.158.31
    clusterIPs:
    - 10.43.158.31
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: http-web
      port: 9090
      protocol: TCP
      targetPort: 9090
    - appProtocol: http
      name: reloader-web
      port: 8080
      protocol: TCP
      targetPort: reloader-web
    selector:
      app.kubernetes.io/name: prometheus
      operator.prometheus.io/name: monitoring-kube-prometheus-prometheus
    sessionAffinity: None
    type: ClusterIP
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      meta.helm.sh/release-name: monitoring
      meta.helm.sh/release-namespace: monitoring
    labels:
      app.kubernetes.io/component: metrics
      app.kubernetes.io/instance: monitoring
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/name: kube-state-metrics
      app.kubernetes.io/part-of: kube-state-metrics
      app.kubernetes.io/version: 2.18.0
      helm.sh/chart: kube-state-metrics-7.2.2
      release: monitoring
    name: monitoring-kube-state-metrics
    namespace: monitoring
  spec:
    clusterIP: 10.43.4.28
    clusterIPs:
    - 10.43.4.28
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
    selector:
      app.kubernetes.io/instance: monitoring
      app.kubernetes.io/name: kube-state-metrics
    sessionAffinity: None
    type: ClusterIP
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      meta.helm.sh/release-name: monitoring
      meta.helm.sh/release-namespace: monitoring
      prometheus.io/scrape: 'true'
    labels:
      app.kubernetes.io/component: metrics
      app.kubernetes.io/instance: monitoring
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/name: prometheus-node-exporter
      app.kubernetes.io/part-of: prometheus-node-exporter
      app.kubernetes.io/version: 1.11.1
      helm.sh/chart: prometheus-node-exporter-4.53.1
      jobLabel: node-exporter
      release: monitoring
    name: monitoring-prometheus-node-exporter
    namespace: monitoring
  spec:
    clusterIP: 10.43.48.7
    clusterIPs:
    - 10.43.48.7
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: http-metrics
      port: 9100
      protocol: TCP
      targetPort: 9100
    selector:
      app.kubernetes.io/instance: monitoring
      app.kubernetes.io/name: prometheus-node-exporter
    sessionAffinity: None
    type: ClusterIP
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      app.kubernetes.io/managed-by: prometheus-operator
      managed-by: prometheus-operator
      operated-prometheus: 'true'
    name: prometheus-operated
    namespace: monitoring
    ownerReferences:
    - apiVersion: monitoring.coreos.com/v1
      kind: Prometheus
      name: monitoring-kube-prometheus-prometheus
      uid: 11b47eb2-ebbd-4750-83eb-aca700ac2b75
  spec:
    clusterIP: None
    clusterIPs:
    - None
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: http-web
      port: 9090
      protocol: TCP
      targetPort: http-web
    selector:
      app.kubernetes.io/name: prometheus
    sessionAffinity: None
    type: ClusterIP
- apiVersion: v1
  kind: PersistentVolumeClaim
  metadata:
    annotations:
      meta.helm.sh/release-name: monitoring
      meta.helm.sh/release-namespace: monitoring
      pv.kubernetes.io/bind-completed: 'yes'
      pv.kubernetes.io/bound-by-controller: 'yes'
      volume.beta.kubernetes.io/storage-provisioner: driver.longhorn.io
      volume.kubernetes.io/storage-provisioner: driver.longhorn.io
    finalizers:
    - kubernetes.io/pvc-protection
    labels:
      app.kubernetes.io/instance: monitoring
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/name: grafana
      app.kubernetes.io/version: 13.0.1
      helm.sh/chart: grafana-12.1.1
    name: monitoring-grafana
    namespace: monitoring
  spec:
    accessModes:
    - ReadWriteOnce
    resources:
      requests:
        storage: 5Gi
    storageClassName: longhorn
    volumeMode: Filesystem
    volumeName: pvc-67d84b45-c36b-453d-b0f8-72e58580ef54
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      traefik.ingress.kubernetes.io/redirect-entry-point: websecure
      traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
      traefik.ingress.kubernetes.io/router.tls: 'true'
    name: grafana-ingress
    namespace: monitoring
  spec:
    ingressClassName: traefik
    rules:
    - host: garciaa.grafana.local
      http:
        paths:
        - backend:
            service:
              name: monitoring-grafana
              port:
                number: 80
          path: "/"
          pathType: Prefix
    tls:
    - hosts:
      - garciaa.grafana.local
      secretName: grafana-tls
kind: List
metadata: {}
